# KINDX

./: .coderabbit.yaml  .dockerignore  .env.example  .gitattributes  .gitignore  .mcp.json  .npmrc  .release-please-config.json  .trivyignore  AGENT.md  BACKLOG.md  BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  GOVERNANCE.md  PYTHON.md  README.md  RELEASE_NOTES_1.3.4.md  SECURITY.md  ambicuity-kindx-1.3.2.tgz  flake.nix  package-lock.json  package.json  sample-catalog.yml  schema-migration.ts  tsconfig.build.json  undefined  vitest.config.ts
.agent-plugin/: marketplace.json
.gemini/: config.yaml  styleguide.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SUPPORT.md  dependabot.yml  labeler.yml
demo/: README-additions.md
docs/: auto-invocation-validation.md  cli.md  json-schemas.md  troubleshooting.md  tui.md
engine/: ai-usage.ts  audit.ts  backup.ts  benchmarks.ts  capability-manifest.ts  catalogs.ts  chunker.ts  daemon.ts  diagnostics.ts  encryption.ts  health-checker.ts  index-manager.ts  inference.ts  ingestion.ts  ir-metrics.ts  kindx.ts  link-extractor.ts  llm-pool.ts  mcp-control-plane.ts  memory.ts  migrate-openclaw.ts  migrate.ts  model-integrity.ts  preloader.ts  priority-queue.ts  protocol.ts  rbac.ts  remote-llm.ts  renderer.ts  repository.ts  resilient-store.ts  retryable-llm.ts  runtime.ts  schema.ts  session.ts  sharding.ts  (+3 more)
python/kindx-langchain/: README.md  pyproject.toml
python/kindx-langchain/src/kindx_langchain/: __init__.py  retriever.py
python/kindx-langchain/tests/: test_retriever.py
(+550 files in other folders)
