[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kindx-langchain"
version = "0.1.0"
description = "LangChain retriever integration for KINDX"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Ritesh Rana" }]
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
langchain = ["langchain-core>=0.3.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
